# temp_python_dev_env

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg
.devcontainer/: Dockerfile  Dockerfile_devcontainer.dockerfile  devcontainer.json  docker-compose.extend.yml
.devcontainer/postgresql/: Dockerfile  postgresql.conf  python_dev_env-docker-entrypoint.sh
.github/workflows/: gh-registry.yml
docker/: Dockerfile_original.dockerfile
src/hoge/: huga.py
tests/hoge/: test_piyo.py
