[metadata]
name = example_module
version = 0.0.1
author = yamap55
author_email = example@example.com
description = example modules
url =  http://example.com
license = 'TODO' # TODO:

[options]
package_dir=
    =src
zip_safe = False
packages = find:
# install_requires = pandas

[options.packages.find]
where=src
